# django_api

./: .dmypy.json  .gitignore  README.md  manage.py  mypy.ini  pyproject.toml
api/: .dmypy.json  models.py
apibackend/: asgi.py  settings.py  urls.py  wsgi.py
